[package]
name = "uglyhat"
version = "0.2.0"
edition.workspace = true
description = "Context management system for AI agents"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "uh"
path = "src/bin/uh.rs"

[dev-dependencies]
wiremock = "0.6"
