[package]
name = "semantic_index"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
db.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
open_ai.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlez.workspace = true
sqlez_macros.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
db = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
